JSAI/error/src/test/resources/init/ke-properties2.js
delete Math.PI;
delete Math.abs;

print(Math.hasOwnProperty("PI"));
print(Math.hasOwnProperty("abs"));

